packages/web/src/scss/components/Radio/_Radio.scss
// 1. Use `box-shadow` to ensure the state of the radio is visible when printed.
// 2. Make sure the state of the radio is accessible in forced-colors mode (e.g. Windows High Contrast Mode) where
//    our `box-shadow` indicator is removed.
//
// See: https://moderncss.dev/pure-css-custom-styled-radio-buttons/

@use 'sass:map';
@use '../../theme/form-fields' as form-fields-theme;
@use '../../tools/form-fields' as form-fields-tools;
@use 'theme';

$_field-name: 'Radio';

.Radio {
    @include form-fields-tools.inline-field-root();
}

.Radio__input {
    @include form-fields-tools.inline-field-input();

    display: grid;
    width: theme.$input-size;
    height: theme.$input-size;
    margin: theme.$input-margin;
    font: inherit;
    border-radius: theme.$input-border-radius;
    background-color: transparent;
    place-content: center;

    &:checked {
        border-color: form-fields-theme.$inline-field-input-color-checked;
    }

    &::before {
        content: '';
        width: theme.$input-inner-dot-size;
        height: theme.$input-inner-dot-size;
        border-radius: theme.$input-border-radius;
        background-color: canvastext; // 2.
        box-shadow: theme.$input-box-shadow-before; // 1.
        transform: scale(0);
        transition-property: transform;
        transition-duration: theme.$input-transition-duration;
        transition-timing-function: theme.$input-transition-timing;
    }

    &:checked::before {
        transform: scale(1);
    }
}

.Radio__helperText {
    @include form-fields-tools.helper-text();

    margin-left: form-fields-theme.$spacing;
}

@include form-fields-tools.input-field-validation-states(
    $_field-name,
    theme.$input-box-shadow-x,
    theme.$input-box-shadow-y
);

.Radio__label {
    @include form-fields-tools.inline-field-label();

    margin-left: form-fields-theme.$spacing;
}

.Radio__label--hidden {
    @include form-fields-tools.label-hidden();
}

.Radio__label--required::after {
    @include form-fields-tools.label-required();
}

.Radio--disabled {
    @include form-fields-tools.inline-field-root-disabled();
}

.Radio--disabled .Radio__label {
    @include form-fields-tools.label-disabled();
}

.Radio--disabled .Radio__helperText {
    @include form-fields-tools.helper-text-disabled();
}

.Radio--disabled > .Radio__input,
.Radio > .Radio__input:disabled {
    border-color: form-fields-theme.$input-color-disabled;

    &:checked {
        border-color: form-fields-theme.$input-color-disabled;
    }
}

.Radio--disabled > .Radio__input::before,
.Radio > .Radio__input:disabled::before {
    box-shadow: theme.$input-box-shadow-disabled; // 1.
}

.Radio--item {
    @include form-fields-tools.item();
}

.Radio--item.Radio--disabled {
    @include form-fields-tools.item-disabled();
}

// stylelint-disable selector-max-class, selector-max-compound-selectors, selector-max-specificity -- We need to override the default styles for the label in Item.
.Radio--item .Radio__input:checked ~ .Radio__label,
.Radio--item .Radio__input:checked ~ .Radio__text > .Radio__label {
    // stylelint-enable selector-max-class, selector-max-compound-selectors, selector-max-specificity
    @include form-fields-tools.item-label-checked();
}

.Radio--item .Radio__helperText {
    @include form-fields-tools.item-helper-text();
}

.Radio--item:not(.Radio--disabled):hover .Radio__helperText,
.Radio--item:not(.Radio--disabled):active .Radio__helperText {
    color: inherit;
}

